[package]
name = "cobalt"
version = "0.1.0"
edition = "2021"

[dependencies]
llvm-sys = "140.0.5"
codespan-reporting = "0.11.1"
phf = { version = "0.11", features = ["macros"] }
libc = "0.2.139"
cbt-common = { path = "./cbt-common" }
cbt-compiler = { path = "./cbt-compiler" }
cbt-lexer = { path = "./cbt-lexer" }
cbt-parser = { path = "./cbt-parser" }
espan = { path = "./espan" }
